# server/controllers/pointageController.js
@@ -1,7 +1,9 @@
 var {Employee} = require('../models/employees');
-const {dateTime} = require('../utils/getDateNow');
+const {getDateNow,msTotime} = require('../utils/getDateNow');
 var {pointageEmployee} = require('../models/pointageEmployee');
 const {ObjectId} = require('mongodb');
+var moment = require('moment');  
+
 module.exports =  {
 
 getEmployeesByDateCreation:function(date){
@@ -18,11 +20,12 @@ getEmployeesByDateCreation:function(date){
 
 checkIn:function(id,comment){
 
-    
+    var date;
+    date = getDateNow();
     
     var pointageEmployees = new pointageEmployee({
        IDENTIFIANT_EMPLOYEE :id,
-       CHECK_IN:dateTime,
+       CHECK_IN:date,
        COMMENTAIRE:comment
  
     });
@@ -37,25 +40,45 @@ checkIn:function(id,comment){
     
 },
 
-checkOut:function(id,comment){
+checkOut:async function(id,comment) {
 
     
+    var date = getDateNow();
+    var hours;
+    var pointageEmployees
     
-    var pointageEmployees = new pointageEmployee({
-       IDENTIFIANT_EMPLOYEE :id,
-       CHECK_OUT:dateTime,
-       COMMENTAIRE:comment
- 
-    });
+   await pointageEmployee.checkOutCheckIn(id).then((employee)=>{
+        console.log(employee[0].CHECK_IN);
+        const diffTime = Math.abs(date - employee[0].CHECK_IN);
+        hours = msTotime(diffTime);
+     
+     
+        });
+
+        pointageEmployees =new pointageEmployee({
+            IDENTIFIANT_EMPLOYEE :id,
+            CHECK_OUT:date,
+            COMMENTAIRE:comment,
+            TEMPS_ECOULE:hours
+      
+         });
 
     return new Promise(function(resolve,reject){
-        pointageEmployees.save().then((employee)=>{
-            resolve(employee);
-    }).catch((err)=>{
-      reject(err);
-    })
-     })
+       
+            pointageEmployees.save().then((employee)=>{
+                console.log(typeof(hours));
+                console.log('rr')
+                resolve(employee)
+            }).catch((err)=>{
+                reject(err)
+            });
+            });
+           
+
     
-}
+},
+
+
+
 
 }
