# server/models/pointageEmployee.js
@@ -22,12 +22,26 @@ var pointageEmployeesSchema = mongoose.Schema({
         type: String,
         
        
-      }
+      },
+      TEMPS_ECOULE:{
+          type : String
+      },
+
+
 
 });
 
 
 
+pointageEmployeesSchema.statics.checkOutCheckIn= async function (id) {
+    var employee = this;
+   return employee.find({IDENTIFIANT_EMPLOYEE:id}).sort({"CHECK_IN": -1}).limit(1).then((employee) => {
+       if(!employee) return Promise.reject();
+   
+       return employee;
+
+   });
+}
 
 
 
